.cap/logs/1782702950-85189.log
== stdout ==

== stderr ==
   Compiling rgk-asset v0.1.0 (/Users/arthur/RustroverProjects/rgk/crates/rgk-asset)
   Compiling rgk-zk v0.1.0 (/Users/arthur/RustroverProjects/rgk/crates/rgk-zk)
error[E0432]: unresolved import `rgk_asset::RgkBurnProof`
    --> crates/rgk-zk/src/real_zk.rs:4904:9
     |
4904 |         RgkBurnProof, RgkCovenantSeal, RgkProofPolicy, RGK_FUNGIBLE_ASSET_SCHEMA_ID,
     |         ^^^^^^^^^^^^ no `RgkBurnProof` in the root
     |
     = help: consider importing this struct instead:
             rgk_asset::native::RgkBurnProof

For more information about this error, try `rustc --explain E0432`.
error: could not compile `rgk-zk` (lib test) due to 1 previous error
